[0.1.0] Browse (swipe) implemented, Gradle depd added, Updated Color Palette

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,9 @@
     <color name="mediumslate">#8C77FF</color>
 
 
-    <color name="colorBackgroundAlter">#FAB162</color>
+    <color name="colorBackgroundAlterP">#FAB162</color>
+    <color name="colorBackgroundAlter">#F8C58E</color>
     <color name="colorTextAlter">#191919</color>
-
     <color name="colorBackground">#FB9985</color>
     <color name="colorText">#48484A</color>
 
