--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundAlter"
+    android:gravity="center"
     android:orientation="vertical">
+
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="250dp"-->
+        <!--android:layout_height="250dp">-->
+
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:scaleType="centerCrop"-->
+        <!--android:background="@color/colorBackgroundAlter"-->
+        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->
+
+    <!--</android.support.v7.widget.CardView>-->
 
     <TextView
         android:id="@+id/textView"
@@ -34,6 +50,18 @@
             android:paddingLeft="16dp" />
 
         <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="5dp"
+            android:background="@drawable/edit_text_round"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textPersonName"
+            android:paddingLeft="16dp" />
+
+        <EditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -51,15 +79,15 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:background="@drawable/button_round"
-            android:onClick="bLoginClick"
-            android:text="LOG IN" />
+            android:onClick="bRegisterClick"
+            android:text="REGISTER" />
 
         <TextView
             android:id="@+id/tvLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="tvRegisterClick"
-            android:text="New user? Sign up to create your account"
+            android:onClick="tvLoginClick"
+            android:text="Already have an account?"
             android:textColor="@color/ghostwhite"
             android:textStyle="bold" />
     </LinearLayout>
