--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,53 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="@color/colorBackgroundAlter"
     android:gravity="center"
     android:orientation="vertical">
 
     <!--<android.support.v7.widget.CardView-->
-        <!--android:layout_width="250dp"-->
-        <!--android:layout_height="250dp">-->
+    <!--android:layout_width="250dp"-->
+    <!--android:layout_height="250dp">-->
 
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scaleType="centerCrop"-->
-        <!--android:background="@color/colorBackgroundAlter"-->
-        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->
+    <!--<ImageView-->
+    <!--android:id="@+id/imageView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:scaleType="centerCrop"-->
+    <!--android:background="@color/colorBackgroundAlter"-->
+    <!--app:srcCompat="@mipmap/ic_launcher_round" />-->
 
     <!--</android.support.v7.widget.CardView>-->
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
+        android:id="@+id/lLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:text="MemeMate LOGO"
-        android:textAlignment="center"
-        android:textSize="50sp" />
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/ic_launcher_round" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_marginTop="5dp"
+            android:layout_width="170dp"
+            android:layout_height="33dp"
+            app:srcCompat="@drawable/logo" />
+
+    </LinearLayout>
+
+    <!--android:background="@drawable/button_round"-->
+
+
+    <!--<TextView-->
+    <!--android:id="@+id/textView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_weight="0.5"-->
+    <!--android:text="MemeMate LOGO"-->
+    <!--android:textAlignment="center"-->
+    <!--android:textSize="50sp" />-->
 
     <LinearLayout
+        android:id="@+id/lRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/etUsername"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="5dp"
-            android:background="@drawable/edit_text_round"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            android:paddingLeft="16dp" />
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/etEmail"
@@ -56,10 +75,26 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="5dp"
             android:background="@drawable/edit_text_round"
+            android:drawableLeft="@drawable/ic_email_24dp"
+            android:drawablePadding="8dp"
             android:ems="10"
             android:hint="Email"
             android:inputType="textPersonName"
-            android:paddingLeft="16dp" />
+            android:paddingLeft="10dp" />
+
+        <EditText
+            android:id="@+id/etUsername"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="5dp"
+            android:background="@drawable/edit_text_round"
+            android:drawableLeft="@drawable/ic_person_24dp"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="textPersonName"
+            android:paddingLeft="10dp" />
 
         <EditText
             android:id="@+id/etPassword"
@@ -68,25 +103,42 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="5dp"
             android:background="@drawable/edit_text_round"
+            android:drawableLeft="@drawable/ic_lock_24dp"
+            android:drawablePadding="8dp"
             android:ems="10"
             android:hint="Password"
-            android:inputType="textPersonName"
-            android:paddingLeft="16dp" />
+            android:inputType="textPassword"
+            android:paddingLeft="10dp" />
+
+        <EditText
+            android:id="@+id/etPasswordConfirm"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="5dp"
+            android:background="@drawable/edit_text_round"
+            android:drawableLeft="@drawable/ic_lock_24dp"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:hint="Confirm password"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp" />
 
         <Button
-            android:id="@+id/bLogin"
-            android:layout_width="match_parent"
+            android:id="@+id/bSubmit"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:background="@drawable/button_round"
-            android:onClick="bRegisterClick"
+            android:onClick="bSubmitClick"
+            android:tag="register"
             android:text="REGISTER" />
 
         <TextView
-            android:id="@+id/tvLogin"
+            android:id="@+id/tvChange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="tvLoginClick"
+            android:onClick="tvChangeClick"
             android:text="Already have an account?"
             android:textColor="@color/ghostwhite"
             android:textStyle="bold" />
