--- a/app/src/main/res/drawable/button_round2.xml
+++ b/app/src/main/res/drawable/button_round2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFF"/>
+    <solid android:color="@color/colorPrimaryDark"/>
     <corners android:radius="20dp"/>
 
 </shape>
