--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,20 +9,6 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <!--<android.support.v7.widget.CardView-->
-    <!--android:layout_width="250dp"-->
-    <!--android:layout_height="250dp">-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/imageView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:scaleType="centerCrop"-->
-    <!--android:background="@color/colorBackgroundAlter"-->
-    <!--app:srcCompat="@mipmap/ic_launcher_round" />-->
-
-    <!--</android.support.v7.widget.CardView>-->
-
     <LinearLayout
         android:id="@+id/lLogo"
         android:layout_width="match_parent"
@@ -47,18 +33,6 @@
 
     </LinearLayout>
 
-    <!--android:background="@drawable/button_round"-->
-
-
-    <!--<TextView-->
-    <!--android:id="@+id/textView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_weight="0.5"-->
-    <!--android:text="MemeMate LOGO"-->
-    <!--android:textAlignment="center"-->
-    <!--android:textSize="50sp" />-->
-
     <LinearLayout
         android:id="@+id/lRegister"
         android:layout_width="match_parent"
@@ -68,6 +42,7 @@
         android:orientation="vertical"
         android:visibility="gone"
         >
+
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
@@ -133,7 +108,7 @@
             android:textColor="#AA1B1B"
             android:textStyle="bold" />
 
-        <Button
+        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
             android:id="@+id/bSubmit"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -141,7 +116,10 @@
             android:background="@drawable/button_round"
             android:onClick="bSubmitClick"
             android:tag="signup"
-            android:text="SIGN UP" />
+            android:text="SIGN UP"
+            android:textStyle="bold"
+            app:spinning_bar_color="#000"
+            app:spinning_bar_width="5dp" />
 
         <Button
             android:id="@+id/fbButton"
