--- a/app/src/main/res/layout/item_spot.xml
+++ b/app/src/main/res/layout/item_spot.xml
@@ -53,7 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/skip_white_120dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:scaleType="center"/>
 
     </FrameLayout>
 
