--- a/app/src/main/res/layout/item_spot.xml
+++ b/app/src/main/res/layout/item_spot.xml
@@ -15,7 +15,7 @@
         android:id="@+id/item_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitCenter"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -53,8 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/skip_white_120dp"
-            android:layout_gravity="center"
-            android:scaleType="center"/>
+            android:layout_gravity="center"/>
 
     </FrameLayout>
 
