--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,6 +44,13 @@
                 android:layout_height="wrap_content"
                 android:onClick="logout"
                 android:text="@string/log_out" />
+
+            <Button
+                android:id="@+id/delete_account_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="deleteUser"
+                android:text="@string/delete_your_account" />
         </LinearLayout>
     </ScrollView>
 
